eb/en/1.1/guide/abouthelp.md
# About Enterprise Browser Help
## Overview
Welcome to the Symbol Technologies Enterprise Browser Technical Documentation. This help system allows you to browse the Enterprise Browser documentation on your local computer and features many tools for navigating and searching through the content. The documentation for the latest version is also published to [Launchpad](https://developer.motorolasolutions.com/community/technologies/enterprisebrowser) and may contain additional or updated content. You can also download the [latest documentation](https://s3.amazonaws.com/enterprise-browser/eb.docs.latest.zip) and replace the version you have installed on your computer.

## Updating Local Documentation
There may be updates to the documentation that is included with the Enterprise browser installation after it has been released. Although the documentation for the latest version is also published to [Launchpad](https://developer.motorolasolutions.com/community/technologies/enterprisebrowser) and may contain additional or updated content. You can also update your local version to contain the latest updates.

### Help Version
You can check your current help version by looking at the menu on the left hand side of the page (offline version only). This indicates the version of the help documentation. If the number corresponds with the version of the Enterprise Browser (Noted in the page header), then it is the same as what has been released with the software. Updates to the documentation after release will be denoted by an extra version number. For example, say the Enterprise Browser release was 1.1, a documentation update post release may be indicated with a Help version of 1.1-1

![img](images/HelpVersions.jpg)

### Downloading Updated Documentation
Follow these instructions for updating your local documentation to be the latest.

* [Download the latest documentation](https://s3.amazonaws.com/enterprise-browser/eb.docs.latest.zip)
* Unzip the contents of the download
* Copy the contents of the zip folder to the `[InstallationPath]\HelpFile` folder. For example `C:\EnterpriseBrowser\Documentation\HelpFile\`
* The folder should look something like below
* Open `index.html`

![img](images/HelpFolder.png)


## Help Features
### Table of Contents:
The menu on the left hand side of the page can be used to navigate through the varies documents contained inside this help application.

![img](images/about/toc1.jpg)

The documents are broken in to categories that can be drilled down to.

![img](images/about/toc3.jpg)

The menu icon will allow you to collapse and expand the "Table of Contents".

![img](images/about/toc2.png)
 
### Search:
At the top of the page you will see a search box. 

![img](images/about/s1.png)

This box will search all documents in the system and highlight selected terms in the current document. You can switch between relevant documents buy selecting the document in "Search Results". You can minimize the "Search Results" by clicking on the "-" icon. You can bring the "Search Results back by click on the search bar. 

![img](images/about/s2.jpg)

At the bottom right hand side of the page you will see next and previous buttons that will allow you to move through the selected items. 

![img](images/about/s3.png)

After searching, if you browse to another page the search terms will automatically be used to bring you to the first found entry. Clearing the search results field will prevent this behavior.

### In This Document:
In This document is a list of the main sections in the current document. When Selecting a link the document the document will scroll to the selected section, and show any sub sections.

![img](images/about/itd1.jpg)

### Image Viewer:
When click on an image the image will open up at 100% in an in page pop up. If the image is bigger then your screen you will be able to scroll the image inside the pop up. If you click on the image in the pop up it will open in a new tab. Clicking the [X] in the pop up or clicking outside the pop up will close it.

![img](images/about/lb1.jpg)

### External Links
When clicking on a link that is an external website, the url will be opened in a new tab of your browser.

## Supported Web Browsers

* Firefox 29 or newer
* Google Chrome 35 or newer 
* Internet Explore 9 or newer

## Updating Offline Help Docs
Use the guide below to update your offline version of the documentation for Enterprise Browser.

### Help Version
You can check your current help version by looking at the menu on the left hand side of the page (offline version only). This indicates the version of the help documentation. If the number corresponds with the version of the Enterprise Browser (Noted in the page header), then it is the same as what has been released with the software. Updates to the documentation after release will be denoted by an extra version number. For example, say the Enterprise Browser release was 1.1, a documentation update post release may be indicated with a Help version of 1.1-1.

### Downloading Updated Documentation
Follow these instructions for updating your local documentation to be the latest.

1. [Download the latest documentation](https://s3.amazonaws.com/enterprise-browser/eb.docs.latest.zip)
2. Unzip the contents of the download
3. Copy the contents of the zip folder to the `<EB Installation Path>\Documentation\HelpFile` folder. For example `C:\Program Files\Enterprise Browser\Documentation\HelpFile.`